[gd_scene load_steps=2 format=3 uid="uid://bwad82u5xwnhb"]

[ext_resource type="Script" path="res://Settings_screen_script.gd" id="1_gthhm"]

[node name="Settings_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gthhm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -11.5
offset_right = 64.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="resolution" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "resolution"

[node name="resolution_choice" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
item_count = 1
selected = 0
popup/item_0/text = "1024x768"
popup/item_0/id = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "FullScreen"

[node name="full_screen_toggle" type="CheckButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="apply_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 80
text = "APPLY"

[connection signal="toggled" from="VBoxContainer/HBoxContainer2/full_screen_toggle" to="." method="_on_full_screen_toggle_toggled"]
[connection signal="pressed" from="apply_button" to="." method="_on_apply_button_pressed"]
